# DiamondRCA

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.codex/: config.toml
.devcontainer/: devcontainer.json
apps/: streamlit_app.py
notebooks/: 01_project_setup_and_data_pull.ipynb
src/diamond_rca/: __init__.py  config.py  logging_utils.py  paths.py
src/diamond_rca.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/diamond_rca/analysis/: __init__.py  bullpen_analysis.py  collapse_definition.py  offense_analysis.py  rolling_metrics.py  starter_analysis.py
src/diamond_rca/data/: __init__.py  extract.py  loaders.py  savers.py
src/diamond_rca/rca/: __init__.py  fishbone.py  five_whys.py  framework.py  timeline.py
src/diamond_rca/ui/: __init__.py  service.py
src/diamond_rca/viz/: plots.py
tests/: test_collapse_definition.py  test_extract.py  test_framework.py  test_paths.py  test_ui_service.py
